--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <title>Home Page</title>
-</head>
+	<meta charset="UTF-8">
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<title>Mongo Scraper</title>
 
-<body>
-  {{{body}}}
-</body>
 
+  {{!-- Bootstrap CSS --}}
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet">
+
+  {{!-- Bootstrap Jquery --}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+  {{!-- Main CSS --}}
+  <link rel="stylesheet" href="/assets/css/style.css">
+
+  {{!-- Font Awesome --}}
+  <script src="https://kit.fontawesome.com/3f7d57fead.js" crossorigin="anonymous"></script>
+
+  {{!-- Handlebars library --}}
+  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
+  <div id="display"></div>
+        
+	</head>
+	<body>
+
+    <header class="header">
+    <h1 class="heading-main">Sports News</h1>
+    </header>
+
+    <div class="container">
+		{{{ body }}}
+    </div>
+    
+	</body>
+	
+	<script src="assets/js/app.js" type="text/javascript"></script>
 </html>
