--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Mongo Scraper</title>
+  <meta charset="UTF-8">
+  <title>Mongo Scraper</title>
 
 
   {{!-- Bootstrap CSS --}}
@@ -23,19 +23,21 @@
   {{!-- Handlebars library --}}
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
   <div id="display"></div>
-        
-	</head>
-	<body>
 
-    <header class="header">
-    <h1 class="heading-main">Sports News</h1>
-    </header>
+</head>
 
-    <div class="container">
-		{{{ body }}}
-    </div>
-    
-	</body>
-	
-	<script src="assets/js/app.js" type="text/javascript"></script>
+<body>
+
+  <header class="header">
+    <h1 class="heading-main text-center">Sports News</h1>
+  </header>
+
+  <div class="container">
+    {{{ body }}}
+  </div>
+
+</body>
+
+<script src="assets/js/app.js" type="text/javascript"></script>
+
 </html>
