--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,10 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
   <div id="display"></div>
 
+{{!-- BootboxJS --}}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.3.3/bootbox.min.js"></script>
+
+
 </head>
 
 <body>
